[skip ci] HACK: remove --add-opens from MAVEN_OPTS